# chinese_address_parser

./: .env.sample  README.md  address_objects.json  provinces_fixture.json  pyproject.toml  special_words_fixture.json
config/: settings.py  urls.py
parser/: models.py  services.py  tests.py  views.py
parser/management/commands/: add_provinces.py  data_init.py
parser/migrations/: 0001_initial.py  0002_address.py  0003_delete_address_remove_addressobject_parent_item_1_and_more.py  0004_specialword_popularity.py  0005_remove_province_popularity_and_more.py
